UniCrown Live Site v1.1

--- a/index.html
+++ b/index.html
@@ -364,6 +364,38 @@
                                     Now<i class="fa-regular fa-cart-shopping"></i></a></button>
                         </div>
                     </div>
+                    <div class="col">
+                        <div class="col-in">
+                            <img src="./HowItsLOOKS White/WX-13.png" alt="">
+                            <p class="mb-0 mt-4">
+                                <strong>Product: </strong><span>WX-13</span>
+                            <p>
+                                <strong>Price: </strong><span class="text-success">350৳ </span><del><span
+                                        class="text-danger">499৳</span></del>
+                            </p>
+                            </p>
+                            </img>
+                            <button class="btn btn-warning fw-semibold"><a target="_blank"
+                                    href="https://wa.me/+8801605153053?text=I am interested to buy this product from UniCrown. The product code is WX-13">Buy
+                                    Now<i class="fa-regular fa-cart-shopping"></i></a></button>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="col-in">
+                            <img src="./HowItsLOOKS White/WX-14.png" alt="">
+                            <p class="mb-0 mt-4">
+                                <strong>Product: </strong><span>WX-14</span>
+                            <p>
+                                <strong>Price: </strong><span class="text-success">350৳ </span><del><span
+                                        class="text-danger">499৳</span></del>
+                            </p>
+                            </p>
+                            </img>
+                            <button class="btn btn-warning fw-semibold"><a target="_blank"
+                                    href="https://wa.me/+8801605153053?text=I am interested to buy this product from UniCrown. The product code is WX-14">Buy
+                                    Now<i class="fa-regular fa-cart-shopping"></i></a></button>
+                        </div>
+                    </div>
 
                 </div>
             </div>
@@ -675,6 +707,34 @@
                             </p>
                             </img><button class="btn btn-warning fw-semibold"><a
                                     href="https://wa.me/+8801605153053?text=I am interested to buy this product from UniCrown. The product code is UX-22"
+                                    target="_blank"> Buy
+                                Now<i class="fa-regular fa-cart-shopping"></i></a></button>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="col-in">
+                            <img src="./HowITLooks Black/UX-23.png" alt="">
+                            <p class="mb-0">
+                                <strong>Product: </strong><span>UX-23</span>
+                            <p><strong>Price: </strong><span class="text-success">350৳ </span><del><span
+                                        class="text-danger">450৳</span></del></p>
+                            </p>
+                            </img><button class="btn btn-warning fw-semibold"><a
+                                    href="https://wa.me/+8801605153053?text=I am interested to buy this product from UniCrown. The product code is UX-23"
+                                    target="_blank"> Buy
+                                Now<i class="fa-regular fa-cart-shopping"></i></a></button>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="col-in">
+                            <img src="./HowITLooks Black/UX-24.png" alt="">
+                            <p class="mb-0">
+                                <strong>Product: </strong><span>UX-24</span>
+                            <p><strong>Price: </strong><span class="text-success">350৳ </span><del><span
+                                        class="text-danger">450৳</span></del></p>
+                            </p>
+                            </img><button class="btn btn-warning fw-semibold"><a
+                                    href="https://wa.me/+8801605153053?text=I am interested to buy this product from UniCrown. The product code is UX-24"
                                     target="_blank"> Buy
                                 Now<i class="fa-regular fa-cart-shopping"></i></a></button>
                         </div>
